--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-19-WebcamFun/node_modules
-19-WebcamFun/package-lock.json
-20-SpeechDetection/node_modules
-20-SpeechDetection/package-lock.json
+package-lock.json
+node_modules
